--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!--Navbar-->
         <div class="navbar">
             <div class="container flex">
-                <h1 class="logo">Henry</h1>
+                <h1 class="logo">Logi moron</h1>
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
