--- a/doc.html
+++ b/doc.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Document</title>
 </head>
 <body>
+<header>
+	
+</header>
+
 
 </body>
 </html>
